# svm-learn

./: CMakeLists.txt  README.md
svm_common/: CMakeLists.txt
svm_common/inc/: HogFea.h  LBP_Fea.h  LBP_lookup.h  SURFDescriptor.h  SVMDetector.h  Time_t.h  WanHuaLinFea.h  svm.h  svm_config.h  svm_constant.h  svm_constant_eyeclosed.h  svm_constant_eyeopen.h  svm_constant_face.h  svm_constant_gesture.h  svm_constant_smile.h  svm_feature.h  tcomdef.h  tmem.h
svm_common/src/: HogFea.c  HogFea_obsolete.c  LBP_Fea.c  SURFDescriptor.c  SVMDetector.c  Time_t.c  WanHuaLinFea.c  svm.c  svm_constant_eyeclosed.c  svm_constant_eyeopen.c  svm_constant_face.c  svm_constant_gender.cpp  svm_constant_gesture.c  svm_constant_scene.cpp  svm_constant_smile.c  svm_constant_smile.cpp  svm_feature.c
svm_detect/: CMakeLists.txt
svm_detect/inc/: HogFea.h  WanHuaLinFea.h  svm.h  svm_constant.h  tsoffscreen.h
svm_detect/src/: HogFea.cpp  SVMDetector.c  WanHuaLinFea.c  main.c  main.c~  svm.c
svm_extract_feature/: CMakeLists.txt
svm_extract_feature/inc/: WanHuaLinFea.h
svm_extract_feature/src/: HogFea.cpp  WanHuaLinFea.c  main.c
svm_generate_LBP_LOOKUP/: CMakeLists.txt
svm_generate_LBP_LOOKUP/src/: main.c
svm_transfer/: CMakeLists.txt
svm_transfer/src/: main.c
svm_transfer_obsolete/src/: main.c
